nginx-ingress/app-a.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-a
spec:
  replicas: 1
  selector: { matchLabels: { app: webapp-a } }
  template:
    metadata: { labels: { app: webapp-a } }
    spec:
      containers:
      - name: app
        image: hashicorp/http-echo
        args:
        - "-text=This is WebApp A"
---
apiVersion: v1
kind: Service
metadata:
  name: service-a
spec:
  selector: { app: webapp-a }
  ports:
    - port: 80
      targetPort: 5678
