nginx-ingress/app-b.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-b
spec:
  replicas: 1
  selector: { matchLabels: { app: webapp-b } }
  template:
    metadata: { labels: { app: webapp-b } }
    spec:
      containers:
      - name: app
        image: hashicorp/http-echo
        args:
        - "-text=Welcome to API B"
---
apiVersion: v1
kind: Service
metadata:
  name: service-b
spec:
  selector: { app: webapp-b }
  ports:
    - port: 80
      targetPort: 5678
